# bracketizer

./: .gitignore  README.md  pyproject.toml  run.sh
bracketizer/: __init__.py  bracket.py  bracketview.py  config.py  exceptions.py  guess.py  models.py  routes.py  user.py  vote.py
bracketizer/static/: localize-date.js
bracketizer/templates/: admin.html  base.html  bracket.html  index.html  user.html  vote.html
