[tool.poetry]
name = "bracketizer"
version = "0.1.0"
description = ""
authors = ["Jason Short <jason@sheersky.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
